# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-02-03 21:00:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-199

    Summary:
      checkpointing doc fixes
    Revision:
      missingh--head--0.7--patch-199


    modified files:
     ChangeLog Makefile debian/docs doc/Makefile doc/Pesco.pdf


2005-02-03 20:42:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-198

    Summary:
      Rearranged source tree and build system
    Revision:
      missingh--head--0.7--patch-198

    Moved ./libsrc/MissingH to ./MissingH.  Made test use the cabal-built tree.
    

    removed files:
     libsrc/.arch-ids/=id

    modified files:
     ChangeLog Makefile MissingH.cabal

    renamed files:
     libsrc/MissingH/.arch-ids/=id
       ==> MissingH/.arch-ids/=id
     libsrc/MissingH/AnyDBM/.arch-ids/=id
       ==> MissingH/AnyDBM/.arch-ids/=id
     libsrc/MissingH/Checksum/.arch-ids/=id
       ==> MissingH/Checksum/.arch-ids/=id
     libsrc/MissingH/Checksum/CRC32/.arch-ids/=id
       ==> MissingH/Checksum/CRC32/.arch-ids/=id
     libsrc/MissingH/Cmd/.arch-ids/=id
       ==> MissingH/Cmd/.arch-ids/=id
     libsrc/MissingH/Compression/.arch-ids/=id
       ==> MissingH/Compression/.arch-ids/=id
     libsrc/MissingH/ConfigParser/.arch-ids/=id
       ==> MissingH/ConfigParser/.arch-ids/=id
     libsrc/MissingH/Email/.arch-ids/=id
       ==> MissingH/Email/.arch-ids/=id
     libsrc/MissingH/FileArchive/.arch-ids/=id
       ==> MissingH/FileArchive/.arch-ids/=id
     libsrc/MissingH/Hsemail/.arch-ids/=id
       ==> MissingH/Hsemail/.arch-ids/=id
     libsrc/MissingH/Hsemail/.arch-ids/README.id
       ==> MissingH/Hsemail/.arch-ids/README.id
     libsrc/MissingH/Hsemail/.arch-ids/Rfc2234.hs.id
       ==> MissingH/Hsemail/.arch-ids/Rfc2234.hs.id
     libsrc/MissingH/Hsemail/.arch-ids/Rfc2821.hs.id
       ==> MissingH/Hsemail/.arch-ids/Rfc2821.hs.id