@@ -43,7 +43,7 @@ build: build-stamp
 build-stamp: configure-stamp 
 	dh_testdir
 
-	make test-ghc6
+	#make test-ghc6
 	# Add here commands to compile the package.
 	touch build-stamp
 
@@ -67,13 +67,14 @@ install: build
 
 	# Add here commands to install the package into debian/tmp
 	dh_haskell -a
+	make test-ghc6
 
 builddocs: builddocs-stamp
 builddocs-stamp:
 	dh_testdir
 
 	make doc
-	make test-hugs
+	#make test-hugs
 
 installdocs: builddocs
 	dh_testdir
@@ -82,6 +83,7 @@ installdocs: builddocs
 	dh_installdirs -i
 
 	dh_haskell -i
+	make test-hugs
 
 # Build architecture-independent files here.
 binary-indep: builddocs installdocs
